hphp/test/quick/redecl_abstract_method.php.expectf

Fatal error: Cannot re-declare abstract method A::f() abstract in class B in %s on line 7
